api接口文档管理系统设计文档

--- a/src/main/resources/static/projectDeploy.html
+++ b/src/main/resources/static/projectDeploy.html
@@ -74,6 +74,8 @@
                         trElements += trElement;
                     }
                     $("#machineTableTBody").html(trElements);
+                } else {
+                    $("#machineTableTBody").html("<tr><td colspan='6' class='text-center'>没有记录！</td></tr>")
                 }
             });
 
