--- a/src/main/resources/static/projectDeploy.html
+++ b/src/main/resources/static/projectDeploy.html
@@ -68,7 +68,8 @@
                         trElement += ("<td class='text-center'>" + data[i].path + "</td>");
                         trElement += ("<td class='text-center'>"
                         + "<button class='btn btn-success btn-xs' data-deployid='" + data[i].deployIdText + "'>编辑</button>&nbsp;&nbsp;&nbsp;&nbsp;"
-                        + "<button class='btn btn-danger btn-xs' data-deployid='" + data[i].deployIdText + "'>删除</button>" +
+                        + "<button data-toggle=\"modal\" data-target=\"#deleteMachineModal\" " +
+                        "class='btn btn-danger btn-xs' data-deployid='" + data[i].deployIdText + "'>删除</button>" +
                         "</td>");
                         trElement += "</tr>";
                         trElements += trElement;
@@ -287,6 +288,32 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<!-- 删除项目模态框（Modal） -->
+<div class="modal fade" id="deleteMachineModal" tabindex="-1" role="dialog" aria-labelledby="deleteMachineModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="deleteMachineModalLabel">
+                    删除提示
+                </h4>
+            </div>
+            <div class="modal-body">
+                确定删除该条机器信息吗？
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
 
 </body>
 </html>
