api接口管理平台开发

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -86,6 +86,10 @@
                             "data-target=\"#deleteProjectModal\" data-projectid='" + data.rows[i].projectIdText + "'>删除</button>"
                             + "&nbsp;&nbsp;&nbsp;&nbsp;"
                             + "<button class='btn btn-warning btn-xs' data-projectid='" + data.rows[i].projectIdText + "'>机器管理</button>"
+                            + "&nbsp;&nbsp;&nbsp;&nbsp;"
+                            + "<button class='btn btn-info btn-xs' data-projectid='" + data.rows[i].projectIdText + "'>配置管理</button>"
+                            + "&nbsp;&nbsp;&nbsp;&nbsp;"
+                            + "<button class='btn btn-default btn-xs' data-projectid='" + data.rows[i].projectIdText + "'>接口管理</button>"
                             + "</td>");
                             trElement += "</tr>";
                             trElements = trElements + trElement;
