api接口文档管理系统设计文档

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -288,6 +288,12 @@
                 window.location.href = "projectConfig.html?projectId=" + projectId;
             });
 
+            //项目接口管理按钮事件
+            $("#projectTableTBody").delegate("button.btn-default", "click", function () {
+                var projectId = $(this).attr("data-projectid");
+                window.location.href = "projectInterface.html?projectId=" + projectId;
+            });
+
             //删除用户提交按钮事件
             $("#deleteUserModal").delegate("button.btn-primary", "click", function () {
                 var userId = $(this).attr("data-userid");
