api接口文档管理系统设计文档

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -344,7 +344,7 @@
 <div class="container">
     <div class="row">
         <!--用户管理-->
-        <div class="panel panel-info" id="userManagerPanel">
+        <div class="panel panel-primary" id="userManagerPanel">
             <div class="panel-heading">
                 <h3 class="panel-title">用户管理</h3>
             </div>
@@ -385,7 +385,7 @@
             </div>
         </div>
         <!--项目管理-->
-        <div class="panel panel-info" id="projectManagerPanel">
+        <div class="panel panel-primary" id="projectManagerPanel">
             <div class="panel-heading">
                 <h3 class="panel-title">项目管理</h3>
             </div>
