--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -82,7 +82,7 @@
 <div class="container">
     <div class="row">
         <!--接口管理-->
-        <div class="panel panel-info" id="userManagerPanel">
+        <div class="panel panel-primary" id="userManagerPanel">
             <div class="panel-heading">
                 <h3 class="panel-title">接口管理
                     <div style="display:inline;float:right"><a href="index.html"><span
