--- a/src/main/resources/static/projectDeploy.html
+++ b/src/main/resources/static/projectDeploy.html
@@ -203,7 +203,7 @@
 <div class="container">
     <div class="row">
         <!--机器管理-->
-        <div class="panel panel-info" id="userManagerPanel">
+        <div class="panel panel-primary" id="userManagerPanel">
             <div class="panel-heading">
                 <h3 class="panel-title">机器管理
                     <div style="display:inline;float:right"><a href="index.html"><span
