--- a/src/main/resources/static/projectDeploy.html
+++ b/src/main/resources/static/projectDeploy.html
@@ -206,8 +206,8 @@
         <div class="panel panel-primary" id="userManagerPanel">
             <div class="panel-heading">
                 <h3 class="panel-title">机器管理
-                    <div style="display:inline;float:right"><a href="index.html"><span
-                            class="glyphicon glyphicon-home"></span></a></div>
+                    <div style="display:inline;float:right;"><a href="index.html"><span
+                            class="glyphicon glyphicon-home" style="color: rgb(212, 106, 64);"></span></a></div>
                 </h3>
             </div>
             <div class="panel-body">
