--- a/src/main/resources/static/projectConfig.html
+++ b/src/main/resources/static/projectConfig.html
@@ -421,5 +421,130 @@
         </div>
     </div>
 </footer>
+
+
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                    重要提示
+                </h4>
+            </div>
+            <div class="modal-body" id="myModalBody" style="word-break:break-all; word-wrap:break-all;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary" id="confirmSubmitBtn">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<div class="modal fade" id="delModal" tabindex="-1" role="dialog" aria-labelledby="delModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="delModalLabel">
+                    重要提示
+                </h4>
+            </div>
+            <div class="modal-body" id="delModalBody" style="word-break:break-all; word-wrap:break-all;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary" id="confirmDelBtn">
+                    确认删除
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="legalModal" tabindex="-1" role="dialog" aria-labelledby="legalModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="legalModalLabel">
+                    重要提示
+                </h4>
+            </div>
+            <div class="modal-body" id="legalModalBody">
+            </div>
+            <div class="modal-footer"></div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="updateModalLabel">
+                    编辑配置
+                </h4>
+            </div>
+            <div class="modal-body" id="updateModalBody">
+                <form class="form-horizontal" id="jqgrid_form" role="form">
+                    <div class="form-group">
+                        <label for="jqgrid_key" class="col-sm-3 control-label">Key</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="jqgrid_key" name="jqgrid_key"
+                                   readonly="readonly"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="jqgrid_value" class="col-sm-3 control-label">Value</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="jqgrid_value" name="jqgrid_value"/>
+                        </div>
+                    </div>
+                    <div class="form-group" id="jqgrid_defAppRunEnv_Panel">
+                        <label for="jqgrid_value" class="col-sm-3 control-label">应用运行环境</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="jqgrid_defAppRunEnvValue"
+                                   name="jqgrid_defAppRunEnvValue" readonly="readonly"/>
+                            <input type="hidden" id="jqgrid_defAppRunEnv" name="jqgrid_defAppRunEnv"/>
+                        </div>
+                    </div>
+                    <div class="form-group" id="jqgrid_defAppRunVersion_Panel">
+                        <label for="jqgrid_value" class="col-sm-3 control-label">版本号</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="jqgrid_defAppRunVersion"
+                                   name="jqgrid_defAppRunVersion" readonly="readonly"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary" id="confirmUpdateBtn">
+                    更新
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
